@@ -4,6 +4,11 @@ package body agar.gui.window is
 
   function allocate_named
     (flags : flags_t := 0;
+     name  : cs.chars_ptr) return window_access_t;
+  pragma import (c, allocate_named, "AG_WindowNewNamed");
+
+  function allocate_named
+    (flags : flags_t := 0;
      name  : string) return window_access_t
   is
     ca_name : aliased c.char_array := c.to_c (name);
@@ -15,12 +20,20 @@ package body agar.gui.window is
 
   procedure set_caption
     (window  : window_access_t;
+     fmt     : cs.chars_ptr;
+     caption : cs.chars_ptr);
+  pragma import (c, set_caption, "AG_WindowSetCaption");
+
+  procedure set_caption
+    (window  : window_access_t;
      caption : string)
   is
+    ca_fmt     : aliased c.char_array := c.to_c ("%s");
     ca_caption : aliased c.char_array := c.to_c (caption);
   begin
     set_caption
       (window  => window,
+       fmt     => cs.to_chars_ptr (ca_fmt'unchecked_access),
        caption => cs.to_chars_ptr (ca_caption'unchecked_access));
   end set_caption;
 
