@@ -1,11 +1,25 @@
+with agar.core.error;
+
 package body agar.gui is
 
   use type c.int;
 
-  function init (flags : agar.core.init_flags_t := 0) return boolean is
-  begin
-    return init (flags) = 0;
-  end init;
+  protected state is
+    procedure init_gui;
+    procedure init_video;
+    function inited_gui return boolean;
+    function inited_video return boolean;
+  private
+    gui   : boolean := false;
+    video : boolean := false;
+  end state;
+
+  protected body state is
+    procedure init_gui is begin gui := true; end;
+    procedure init_video is begin video := true; end;
+    function inited_gui return boolean is begin return gui; end;
+    function inited_video return boolean is begin return video; end;
+  end state;
 
   function init_video
     (width  : positive;
@@ -13,11 +27,27 @@ package body agar.gui is
      bpp    : natural;
      flags  : video_flags_t := 0) return boolean is
   begin
-    return init_video
+    if init_video
       (width  => c.int (width),
        height => c.int (height),
        bpp    => c.int (bpp),
-       flags  => flags) = 0;
+       flags  => flags) = 0 then
+      state.init_video;
+    end if;
+    return state.inited_video;
   end init_video;
+
+  function init (flags : agar.core.init_flags_t := 0) return boolean is
+  begin
+    if state.inited_video then
+      if init (flags) = 0 then
+        state.init_gui;
+      end if;
+    else
+      agar.core.error.set ("video must be initialised before GUI");
+    end if;
+    return state.inited_gui;
+  end init;
+
 
 end agar.gui;
